--- a/doc/gf2vs.tex
+++ b/doc/gf2vs.tex
@@ -8,6 +8,7 @@
 \usepackage{newtxtext,newtxmath}
 
 % link to database file
+% \usepackage{natbib} not working
 \usepackage[backend=biber]{biblatex}
 \addbibresource{/home/ralf/Projekte/LitDatabase/liblatexbase.bib}
 
@@ -16,6 +17,7 @@
 
 \setcounter{biburllcpenalty}{9000}% Kleinbuchstaben
 \setcounter{biburlucpenalty}{9000}% Großbuchstaben
+
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{2ex}
@@ -35,7 +37,7 @@
 
 \title{Vector space $\BF_2^n$}
 \author{Ralf Poeppel \\ \url{mailto:ralf@poeppel-familie.de}}
-\date{2026-01-14}
+\date{2026-01-28}
 
 \begin{document}
 
@@ -45,73 +47,135 @@
 This article is a supplementary documentation to the Go package \texttt{gf2vs}~\cite{rp:gopkg:gf2vs}. The package implements data types and functions
 modeling the vector space $\BF_2^n$.
 
-The vector space $\BF_2^n$ of dimension $n$ is based on the finite field of order $2$, the Galois field $GF(2)$~\cite{wikipedia_en_2026_GaloisField}. We use $GF(2)$ to model binary values, or bits, and consider the properties of the vector space of bit vectors.
+The vector space $\BF_2^n$ of dimension $n$ is based on the finite field of order $2$, the Galois field $GF(2)$. We use $GF(2)$ to model binary values, or bits, and provide the properties of the vector space of bit vectors.
 \end{abstract}
 
-\section*{Field $\BF_2$}
+%~\cite{wikipedia_en_2026_GaloisField}
 
-The finite field of order $2$ has two elements $\BF_2 = \{0, 1\}$ and the operations addition~$+$ and multiplication~$\cdot$. For the
-definition see equation~\eqref{def:fieldoperations}.
+\section{Field $\BF_2$}
+
+\subsection{Supporting Set}
+
+The supporting set of $GF(2) = \BF_2$ is $S = \{0, 1\}$. This set equivalent to $\BZ/\BZ2$ the cyclic set of order 2. This set hold the values of a bit in computer science. In logic we have the boolean values False $F = 0$ and True $T = 1$ \cite{knuth:taocp_v4_f0}.
+
+\subsection{Operations}
+The operations of $\BF_2 = \BZ/\BZ2$ are defined modulo~2 see \cite{Fischer2020} ch. 2.2.6.
+
+The operations addition and multiplication of the field $\BF_2$ satisfies the group 
+axioms~\cite{wikipedia_en_2026_GroupMathematics}\footnote{We cite Wikipedia for reused wordings.}, both operations are commutative.
+
+\subsubsection{Negation}
 
 \begin{equation}
 \begin{array}{r l l l l}
-+ : & 0 + 0 = 0, & 0 + 1 = 1, & 1 + 0 = 1, & 1 + 1 = 0, \\
-\cdot : & 0 \cdot 0 = 0, & 0 \cdot 1 = 0, & 1 \cdot 0 = 0, & 1 \cdot 1 = 1. \\
+- : \BF_2 \rightarrow \BF_2, & - x = x, & -0 = 0, & -1 = 1. \\
 \end{array}
-\label{def:fieldoperations}
+\end{equation}
+The negation of $1$ in $\BF_2$ is computed as $(- 1)\mod 2 = 1$
+
+\subsubsection{Value}
+We define the mapping value $| x |$ of  an element $x$ of $\BF_2$:
+\begin{equation}
+\begin{array}{r l l l l}
+| x | : \BF_2 \rightarrow \BZ, &| 0 | = 0, & | 1  | = 1. \\
+\end{array}
+\end{equation}
+
+\subsubsection{Addition}
+The addition is named exclusive disjunction in logic and XOR \cite{knuth:taocp_v4_f0, wikipedia_en_2025_ExclusiveOr} in computer science.
+The definition of addition is given in equation \ref{def:opaddition} obeying $(1+1) \mod 2 = 0$.
+\begin{equation}
+\begin{array}{r l l l l}
++ : \BF_2 \times \BF_2 \rightarrow \BF_2, & 0 + 0 = 0, & 0 + 1 = 1, & 1 + 0 = 1, & 1 + 1 = 0, \\
+\end{array}
+\label{def:opaddition}
+\end{equation}
+
+The group axioms \cite{Fischer2020} ch. 2.2.8 for the Group $G = \BF_2$ and the operation addition are satisfied:
+\begin{description}
+\item[Associativity] \ \\
+$\forall a, b, c \in G: (a + b) + c = a + (b + c)$. 
+\item[Identity element $e = 0$] \ \\
+$\exists e \in G, \forall a \in G: e + a = a \text{ and } a + e = a$, $e = 0$, $e$ is unique.
+\item[Inverse element $(-a) = a$] \ \\
+$\forall a \in G \enspace \exists (-a) \in G : a + (-a) = e \text{ and } (-a) + a = e$, $e$ identity element, $(-a) = a$ is unique for each $a$.
+\item[Commutativity] \ \\
+$a + b = b + a$.
+\end{description}
+So $\BF_2$ with the operation addition is an abelian group.
+
+\subsubsection{Multiplication}
+The multiplication is named conjunction in logic and 
+AND \cite{knuth:taocp_v4_f0, wikipedia_en_2025_LogicalConjunction} in computer science.
+The multiplication is identically defined as in $\BZ$.
+\begin{equation}
+\begin{array}{r l l l l}
+\cdot : \BF_2 \times \BF_2 \rightarrow \BF_2, & 0 \cdot 0 = 0, & 0 \cdot 1 = 0, & 1 \cdot 0 = 0, & 1 \cdot 1 = 1. \\
+\end{array}
+\label{def:opmultiplication}
 \end{equation}
 
 We may use the notation $ab$ instead of $a \cdot b$, omitting the multiplication sign if there is no ambiguity.
 
-Each of the two operations of the field $\BF_2$ satisfies the group axioms~\cite{wikipedia_en_2026_GroupMathematics} for the groups
-$G_+ := (\BF_2, +)$ and $G_{\cdot} := (\BF_2, \cdot)$. In addition, both operations are commutative. For reference the group axioms are repeated here. We use the symbol $\circ$ to denote the binary operations $+$ or~$\cdot$.
-
+The group axioms for the Group $G = \BF_2$ and the operation multiplication are satisfied:
 \begin{description}
 \item[Associativity] \ \\
-$\forall a, b, c \in G: (a \circ b) \circ c = a \circ (b \circ c)$.
-\item[Identity element $e$] \ \\
-$\exists e \in G, \forall a \in G: e \circ a = a \text{ and } a \circ e = a$, $e$ is unique.
-\item[Inverse element $a^{-1}$] \ \\
-$\forall a \in G \enspace \exists b \in G : a \circ b = e \text{ and } b \circ a = e$, $e$ identity element, $b$ is unique for each $a$, notation $b = a^{-1}$.
+$\forall a, b, c \in G: (a \cdot b) \cdot c = a \cdot (b \cdot c)$.
+\item[Identity element $e = 1$] \ \\
+$\exists e \in G, \forall a \in G: e \cdot a = a \text{ and } a \cdot e = a$, $e= 1$, $e$ is unique.
+\item[Inverse element $a^{-1} = a$] \ \\
+$\forall a \in G, a \ne 0, \enspace \exists a^{-1} \in G : a \cdot a^{-1} = e \text{ and } a^{-1}b \cdot a = e$, $e$ identity element, $a^{-1} = 1$ is the only inverse element.
 \item[Commutativity] \ \\
-$a \circ b = b \circ a$.
+$a \cdot b = b \cdot a$.
 \end{description}
+So $\BF_2$ with the operation multiplication is an abelian group.
 
-We can look at the field from an algebraic point of view or from a logical point of view. In logic the field can be seen as the Boolean values $F = 0$ and $T = 1$. The Boolean operations are disjunction $\vee$~\cite{wikipedia_en_2025_InclusiveOr},
-exclusive or (contravalence)~$\oplus$~\cite{wikipedia_en_2025_ExclusiveOr} and
-conjunction $\wedge$~\cite{wikipedia_en_2025_LogicalConjunction}. The definitions are repeated in equation~\eqref{def:booleanoperation}.
+
+\subsubsection{Disjunction}
+
+In boolean logic we have the operation disjunction, named OR in computer science \cite{knuth:taocp_v4_f0, wikipedia_en_2025_InclusiveOr}.
 
 \begin{equation}
 \begin{array}{r l l l l}
-\vee : & 0 \vee 0 = 0, & 0 \vee 1 = 1, & 1 \vee 0 = 1, & 1 \vee 1 = 1, \\
-\oplus : & 0 \oplus 0 = 0, & 0 \oplus 1 = 1, & 1 \oplus 0 = 1, & 1 \oplus 1 = 0, \\
-\wedge : & 0 \wedge 0 = 0, & 0 \wedge 1 = 0, & 1 \wedge 0 = 0, & 1 \wedge 1 = 1. \\
+\vee : \BF_2 \times \BF_2 \rightarrow \BF_2, & 0 \vee 0 = 0, & 0 \vee 1 = 1, & 1 \vee 0 = 1, & 1 \vee 1 = 1 \\
 \end{array}
 \label{def:booleanoperation}
 \end{equation}
 
-Please note that the operations $\oplus$ and $\wedge$ are identically defined as $+$ and $\cdot$ and hence satisfy the group axioms.
+The operation $\vee$ does not satisfy the group axioms; there is no inverse element. 
 
-The operation $\vee$ does not satisfy the group axioms; there is no inverse element. In the remaining chapters we will use the
-notation $+, \cdot, \vee$ for the operations only.
+\subsection{Field axioms}
+
+The set $K := \BF_2$ with the operations addition and multiplication satisfies the field axioms \cite{Fischer2020} ch. 2.3.3.
+\begin{description}
+\item[K1] $K$ with the addition $+$ is an abelian group.
+\item[K2] $K^* := K\setminus \{0\}$ with the multiplication $\cdot$ for every element of $K^*$ is an abelian group.
+\item[K3] distributive property \cite{wikipedia_en_2025_DistributiveProperty} is satisfied $\forall a, b, c \in K$
+\begin{equation}
+\begin{array}{c}
+a \cdot (b + c) = a \cdot b + a \cdot c, \\
+(a + b) \cdot c = a \cdot c + b \cdot c. \\
+\end{array}
+\end{equation}
+\end{description}
+
+
 
 \section*{Vector space $\BF_2^n$}
 
 We define the vector space
 $\BF_2^n$ over the field $\BF_2$ as the set $V$ of vectors $v$ with $n$ elements of the field, together with the
 binary operation of vector addition and the binary function of scalar multiplication, see~\eqref{def:vectoroperations}.
+This definition is similar to the one in~\cite{wikipedia_en_2025_VectorSpace}.
+We use the notation $v := (v_i)$ for the vector $v$ with components $v_i$.
 
 \begin{equation}
-u + v = w, \enspace u, v, w \in V, \quad
+u \oplus v = w, \enspace u, v, w \in V, \quad
 a \cdot v = w, \enspace a \in \BF_2, \; v, w \in V.
 \label{def:vectoroperations}
 \end{equation}
 
 We apply the addition element-wise and we multiply the scalar with each element of the vector.
-
-This definition is similar to the one in~\cite{wikipedia_en_2025_VectorSpace}.
-
-We use the notation $v := (v_i)$ for the vector $v$ with components $v_i$.
 
 In addition we define two distinguished elements of $\BF_2^n$:
 
@@ -126,32 +190,32 @@ The axioms of a vector space are satisfied~\cite{wikipedia_en_2025_VectorSpace}:
 
 \begin{description}
 \item[Associativity of vector addition] \ \\
-$u + (v + w) = (u + v) + w, \enspace \forall u, v, w \in \BF_2^n$.
+$u \oplus (v \oplus w) = (u \oplus v) \oplus w, \enspace \forall u, v, w \in \BF_2^n$.
 \item[Commutativity of vector addition] \ \\
-$u + v = v + u, \enspace \forall u, v \in \BF_2^n$.
+$u \oplus v = v \oplus u, \enspace \forall u, v \in \BF_2^n$.
 \item[Identity element of vector addition] \ \\
-$\exists \0 \in \BF_2^n : v + \0 = v, \enspace \forall v \in \BF_2^n$.
+$\exists \0 \in \BF_2^n : v \oplus \0 = v, \enspace \forall v \in \BF_2^n$.
 \item[Inverse elements of vector addition] \ \\
-$\forall v \in \BF_2^n \enspace \exists -v \in \BF_2^n : v + (-v) = \0$, and $-v = v$, i.e.\ each vector is its own additive inverse.
+$\forall v \in \BF_2^n \enspace \exists -v \in \BF_2^n : v \oplus (-v) = \0$, and $-v = v$, i.e.\ each vector is its own additive inverse.
 \item[Compatibility of scalar multiplication with field multiplication] \ \\
 $a (b v) = (ab) v, \enspace a, b \in \BF_2, \; v \in \BF_2^n$.
 \item[Identity element of scalar multiplication] \ \\
 $1 v = v, \enspace 1 \in \BF_2, \; v \in \BF_2^n$, where $1$ is the multiplicative identity of $\BF_2$.
 \item[Distributivity of scalar multiplication with respect to vector addition] \ \\
-$a (u + v) = a u + a v, \enspace a \in \BF_2, \; u, v \in \BF_2^n$.
+$a (u \oplus v) = a u \oplus a v, \enspace a \in \BF_2, \; u, v \in \BF_2^n$.
 \item[Distributivity of scalar multiplication with respect to field addition] \ \\
-$(a + b) v = a v + b v, \enspace a, b \in \BF_2, \; v \in \BF_2^n$.
+$(a \oplus b) v = a v \oplus b v, \enspace a, b \in \BF_2, \; v \in \BF_2^n$.
 \end{description}
 
 In this vector space we are not limited to the operations vector addition and scalar multiplication. We can use the Boolean operations as well.
 
 \begin{description}
 \item[Complement, Not] \ \\
-$\overline v = \1 - v = \1 + v$, swap all bits.
+$\overline v = \1 - v = \1 \oplus v$, swap all bits.
 \item[Disjunction, Or] \ \\
 $u \vee v = (u_i) \vee (v_i) = (u_i \vee v_i)$, element-wise Or.
 \item[Exclusive or, Xor] \ \\
-$u \oplus v = u + v = (u_i) + (v_i) = (u_i + v_i)$, element-wise Xor, equal to vector addition.
+$u \oplus v = u \oplus v = (u_i) \oplus (v_i) = (u_i \oplus v_i)$, element-wise Xor, equal to vector addition.
 \item[Conjunction, And] \ \\
 $u \wedge v = (u_i) \cdot (v_i) = (u_i \cdot v_i)$, element-wise And.
 \end{description}
@@ -173,6 +237,7 @@ We define the unit vectors $e_i$, $i = 1, \dots, n$, of the vector space as the 
 \right.
 \quad x_k \in \BF_2, \enspace e_i \in \BF_2^n. &
 \end{flalign*}
+Please note the $e_i$ are linearly independent.
 
 \item[Generating system] \ \\
 We define the subset $\BE := \{e_i\}$, $\BE \subset \BF_2^n$, of unit vectors $e_i$.
@@ -180,32 +245,57 @@ The subset $\BE$ forms a generating system. Each vector $v$ of $\BF_2^n$ is a li
 \begin{flalign*}
 & v = \sum_{i=1}^n a_i e_i, \enspace a_i \in \BF_2, \enspace e_i \in \BE, \quad \forall v \in \BF_2^n. &
 \end{flalign*}
-Thus the subset $\BE$ spans $\BF_2^n$. In this vector space it is the only such spanning set, and the decomposition of a vector $v$ into a linear combination
-of unit vectors $e_i$ is unique.
+For the summation, we can use either the algebraic addition $+$ or the modulo 2 $\oplus$ addition. 
+
+Thus the subset $\BE$ spans $\BF_2^n$. In this vector space it is one spanning set, and the decomposition of a vector $v$ into a linear combination
+of unit vectors $e_i$ is unique. 
 
 \item[Basis] \ \\
-The subset $\BE$ is the one and only basis of the vector space $\BF_2^n$.
+The subset $\BE$ is one basis of the vector space $\BF_2^n$.
 
 \item[Index] \ \\
 We call $i = 1, \dots, n$ the index of the unit vector $e_i$ in the basis.
 
 \item[Norm] \ \\
-We define the norm $|v|$ of a vector $v \in \BF_2^n$ to be its Hamming weight~\cite{wikipedia_en_2025_HammingWeight},
-i.e.\ the number of ones in the vector. This definition is equivalent to the definition of the $L^1$-norm of
-a vector~$|x|_1$ \cite{Mathworld2025:L1-Norm} sometimes called absolute-value
+We define the norm as a function $p$ of a vector $v \in \BF_2^n$ to be its Hamming weight~\cite{wikipedia_en_2025_HammingWeight}, see \autoref{def:norm}, 
+i.e.\ the number of ones in the vector. In some programming languages like C the function is named popcount(). 
+\begin{flalign}
+ p := \parallel v \parallel :  \BF_2^n \rightarrow \BR, \enspace p = \sum_{i=1}^n v_i
+ \label{def:norm}
+\end{flalign}
+This definition is equivalent to the definition of the $L^1$-norm \cite{Mathworld2025:L1-Norm} of
+a vector~$\parallel x \parallel_1$ sometimes called absolute-value
 norm~\cite{wikipedia_en_2025_NormMathematics}.
 The value of the norm is an element of the set $\{0, 1, \dots, n\} \subset \BR$.
 This definition is in accordance with the definition of the norm of the vector space over $\BC$.
+Obviously this norm satisfies the axioms of a norm:
+\begin{description}
+\item[Subadditivity / Triangle inequality] \ \\
+$p(x+y) \leq p(x)+p(y) \enspace \forall x,y \in \BF_2^n$,
+\item[Absolute homogeneity] \ \\
+$ p(s \cdot x) = s \cdot p(x) \enspace  \forall s \in \BF_2, x \in \BF_2^n$, 
+\item[Positive definiteness] \ \\
+$p(x) = 0 \Rightarrow x = \0$.
+\end{description}
+Please note the norm of the unit vectors $\parallel e_i \parallel = 1, \forall i \in \{1, \dots n \}$.
 
 \item[Inner product] \ \\
-We define the inner product of two vectors to be the norm of their product:
-\[
-\langle u, v \rangle := |u \cdot v|.
-\]
+We define the inner product or scalar product of two vectors as given in equation (\ref{def:innerproduct}):
+\begin{flalign}
+\langle u, v \rangle := 
+\left\{ 
+\begin{array}{ll}
+0, & u \cdot v = \0, \\
+1, & else. \\
+\end{array}
+\right.
+\label{def:innerproduct}
+\end{flalign}
 
 \item[Orthogonality] \ \\
 If $\langle u, v \rangle = 0$, we say the two vectors are orthogonal. Note that the inner product of any vector with $\0$ is $0$.
 \end{description}
+From this it follows $\BE$ is an orthonormal basis, and this is the only orthonormal basis of $\BF-2^n$.
 
 \newpage
 
